--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,36 +53,17 @@ jobs:
 
     - name: Create GitHub Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: v${{ env.VERSION }}
-        release_name: Release v${{ env.VERSION }}
+        name: Release v${{ env.VERSION }}
         body: |
           Release version ${{ env.VERSION }}
           
           ## Changes
           - Check the commit history for detailed changes
+        files: |
+          ./dist/entari_plugin_tsugu-${{ env.VERSION }}.tar.gz
+          ./dist/entari_plugin_tsugu-${{ env.VERSION }}-py3-none-any.whl
         draft: false
         prerelease: false
-
-    - name: Upload Release Assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/entari_plugin_tsugu-${{ env.VERSION }}.tar.gz
-        asset_name: entari-plugin-tsugu-${{ env.VERSION }}.tar.gz
-        asset_content_type: application/gzip
-
-    - name: Upload Wheel Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/entari_plugin_tsugu-${{ env.VERSION }}-py3-none-any.whl
-        asset_name: entari-plugin-tsugu-${{ env.VERSION }}-py3-none-any.whl
-        asset_content_type: application/zip
